--- a/hosts/hyperion/hyperion.yml
+++ b/hosts/hyperion/hyperion.yml
@@ -2,7 +2,7 @@ services:
 
   linkding:
     container_name: "${LINKD_CONTAINER_NAME:-linkding}"
-    image: sissbruecker/linkding:"{LINKD_VERS:-latest-alpine}" # https://hub.docker.com/r/sissbruecker/linkding/tags
+    image: sissbruecker/linkding:"${LINKD_VERS:-latest-alpine}" # https://hub.docker.com/r/sissbruecker/linkding/tags
     security_opt:
       - no-new-privileges:true
       - cap_drop=ALL
