Add linkwarden variables

--- a/hosts/hyperion/hyperion_template.env
+++ b/hosts/hyperion/hyperion_template.env
@@ -7,13 +7,12 @@
 SECRET_KEY=
 
 # allowed hosts (see documentation), should be set to your hostname(s) but might be * (default) for some proxies/providers
-# ALLOWED_HOSTS=recipes.mydomain.com
+# ALLOWED_HOSTS=
 
 # Media URL: Use if media files are not stored in default location (/static/)
 # Options: /any/url/path/, https://any.domain.name/and/url/path
 # MUST END IN '/'
 # MEDIA_URL=
-
 
 # add only a database password if you want to run with the default postgres, otherwise change settings accordingly
 DB_ENGINE=django.db.backends.postgresql
@@ -21,18 +20,17 @@ POSTGRES_HOST=db_recipes
 POSTGRES_DB=djangodb
 POSTGRES_PORT=5432
 POSTGRES_USER=djangouser
-POSTGRES_PASSWORD=
+TANDOOR_POSTGRES_PASSWORD=
 
 # -------------------------- Linkding --------------------------------------
 
 # Docker container name
 LINKD_CONTAINER_NAME=linkding
-# Docker container version, see: https://hub.docker.com/r/sissbruecker/linkding/tags
-LINKD_VERS=
 # Port on the host system that the application should be published on
 LINKD_HOST_PORT=9090
 # Directory on the host system that should be mounted as data dir into the Docker container
 LINKD_HOST_DATA_DIR=./linkding/data
+LINKD_VERS=1.36.0-alpine
 
 # Can be used to run linkding under a context path, for example: linkding/
 # Must end with a slash `/`
@@ -41,3 +39,9 @@ LINKD_HOST_DATA_DIR=./linkding/data
 #LINKD_SUPERUSER_NAME=
 # Password for the initial superuser, leave empty to disable credentials authentication and rely on proxy authentication instead
 #LINKD_SUPERUSER_PASSWORD=
+
+# ------------------------ Linkwarden-------------------------------------
+
+LINKW_POSTGRES_PASSWORD=
+NEXTAUTH_URL=http://localhost:3000/api/v1/auth
+NEXTAUTH_SECRET=
