--- a/hosts/hyperion/hyperion.yml
+++ b/hosts/hyperion/hyperion.yml
@@ -19,7 +19,7 @@ services:
           memory: 512M
     env_file: hyperion.env
     environment:
-      - DATABASE_URL=postgresql://postgres:${LINKW_POSTGRES_PASSWORD}@postgres:5432/postgres
+      - DATABASE_URL=postgresql://postgres:${LINKW_PG_PASSWORD}@postgres:5432/postgres
     volumes:
       - ./linkwarden/data:/data/data
     ports:
@@ -44,7 +44,7 @@ services:
           memory: 512M
     env_file: hyperion.env
     environment:
-      - POSTGRES_PASSWORD=${LINKW_POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD=${LINKW_PG_PASSWORD}
     volumes:
       - ./linkwarden/pgdata:/var/lib/postgresql/data
     networks:
@@ -69,7 +69,12 @@ services:
           memory: 512M
     env_file: hyperion.env
     environment:
-      - POSTGRES_PASSWORD=${TANDOOR_POSTGRES_PASSWORD}
+      - DB_ENGINE=${TANDOOR_DB_ENGINE}
+      - POSTGRES_HOST=${TANDOOR_PG_HOST}
+      - POSTGRES_DB=${TANDOOR_PG_DB}
+      - POSTGRES_PORT=${TANDOOR_PG_PORT}
+      - POSTGRES_USER=${TANDOOR_PG_USER}
+      - POSTGRES_PASSWORD=${TANDOOR_PG_PASSWORD}
     volumes:
       - ./tandoor/postgresql:/var/lib/postgresql/data
     networks:
