Update tandoor postgres env variables

--- a/hosts/hyperion/hyperion_template.env
+++ b/hosts/hyperion/hyperion_template.env
@@ -14,16 +14,16 @@ SECRET_KEY=
 # MUST END IN '/'
 # MEDIA_URL=
 
-# add only a database password if you want to run with the default postgres, otherwise change settings accordingly
-DB_ENGINE=django.db.backends.postgresql
-POSTGRES_HOST=db_recipes
-POSTGRES_DB=djangodb
-POSTGRES_PORT=5432
-POSTGRES_USER=djangouser
-TANDOOR_POSTGRES_PASSWORD=
+# Only add a database password if you want to run with the default postgres, otherwise change settings accordingly
+TANDOOR_DB_ENGINE=django.db.backends.postgresql
+TANDOOR_PG_HOST=db_recipes
+TANDOOR_PG_DB=djangodb
+TANDOOR_PG_PORT=5432
+TANDOOR_PG_USER=djangouser
+TANDOOR_PG_PASSWORD=
 
 # ------------------------ Linkwarden-------------------------------------
 
-LINKW_POSTGRES_PASSWORD=
+LINKW_PG_PASSWORD=
 NEXTAUTH_URL=http://localhost:3000/api/v1/auth
 NEXTAUTH_SECRET=
