--- a/hosts/hyperion/hyperion.yml
+++ b/hosts/hyperion/hyperion.yml
@@ -19,7 +19,7 @@ services:
           memory: 512M
     env_file: hyperion.env
     environment:
-      # DATABASE_URL = engine://username:password@host:port/dbname
+      # DATABASE_URL = engine://username:password@host:port/dbname. This connection string will override all other database settings.
       - DATABASE_URL=postgresql://postgres:${LINKW_PG_PASSWORD}@postgres:5432/postgres
     volumes:
       - ./linkwarden/data:/data/data
