--- a/hosts/hyperion/hyperion_template.env
+++ b/hosts/hyperion/hyperion_template.env
@@ -7,7 +7,7 @@
 SECRET_KEY=
 
 # allowed hosts (see documentation), should be set to your hostname(s) but might be * (default) for some proxies/providers
-# ALLOWED_HOSTS=
+ALLOWED_HOSTS=
 
 # Media URL: Use if media files are not stored in default location (/static/)
 # Options: /any/url/path/, https://any.domain.name/and/url/path
@@ -15,15 +15,15 @@ SECRET_KEY=
 # MEDIA_URL=
 
 # Only add a database password if you want to run with the default postgres, otherwise change settings accordingly
-TANDOOR_DB_ENGINE=django.db.backends.postgresql
-TANDOOR_PG_HOST=db_recipes
-TANDOOR_PG_DB=djangodb
-TANDOOR_PG_PORT=5432
-TANDOOR_PG_USER=djangouser
-TANDOOR_PG_PASSWORD=
+DB_ENGINE=django.db.backends.postgresql
+POSTGRES_HOST=db_recipes
+POSTGRES_DB=tandoor_db
+POSTGRES_PORT=5432
+POSTGRES_USER=tandoor_db_user
+POSTGRES_PASSWORD=
 
 # ------------------------ Linkwarden-------------------------------------
 
-LINKW_PG_PASSWORD=
-NEXTAUTH_URL=http://localhost:3000/api/v1/auth
+LINKW_DB_PASSWORD=
 NEXTAUTH_SECRET=
+NEXTAUTH_URL=http://localhost:3000/api/v1/auth
