--- a/hosts/hyperion/hyperion_template.env
+++ b/hosts/hyperion/hyperion_template.env
@@ -6,7 +6,7 @@
 # random secret key, use for example `base64 /dev/urandom | head -c50` to generate one
 SECRET_KEY=
 
-# allowed hosts (see documentation), should be set to your hostname(s) but might be * (default) for some proxies/providers
+# allowed hosts (see documentation), should be set to your hostname(s) but might be * (default) for some proxies/providers. Comma seperated domain/ip list.
 ALLOWED_HOSTS=
 
 # Media URL: Use if media files are not stored in default location (/static/)
