update tab switching hotkeys

--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -184,10 +184,10 @@ map ctrl+w close_tab
 #---
 
 #: Next tab
-map ctrl+right next_tab
+map command+right next_tab
 
 #: Previous tab
-map ctrl+left previous_tab
+map command+left previous_tab
 
 #--
 
@@ -208,10 +208,10 @@ map kitty_mod+w close_window
 #---
 
 #: Next window
-map kitty_mod+right next_window
+map ctrl+right next_window
 
 #: Previous window
-map kitty_mod+left previous_window
+map ctrl+left previous_window
 
 #---
 
