--- a/customization/.tmux.conf
+++ b/customization/.tmux.conf
@@ -2,8 +2,13 @@
 
 # GENERAL OPTIONS --------------------------------------------
 
+# reload config file with r
+bind F5 source ~/.tmux.conf
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
+
+
 
 # HOTKEYS ----------------------------------------------------
 
@@ -12,16 +17,24 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# Rebind to Ctrl + a, then n to create a new window
+bind t new-window
+
+# Rebind close window to Ctrl + a + x
+bind w kill-window
+
+# Map Alt+Right to next tab
+bind-key -n S-Right next-window
+# Map Alt+Left to previous tab
+bind-key -n S-Left previous-window
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-# reload config file with r
-bind r source-file ~/.tmux.conf
-
-# switch panes using Alt-arrow without prefix
+# switch panes using meta-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
@@ -30,44 +43,44 @@ bind -n M-Down select-pane -D
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# Rebind window rename to Ctrl + r
+bind r command-prompt "rename-window '%%'"
+
 # DESIGN TWEAKS ----------------------------------------------
 
-# don't do anything when a 'bell' rings
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
-
-# clock mode
-setw -g clock-mode-colour yellow
+set -g terminal-overrides 'xterm-256color:Tc'
 
 # copy mode
-setw -g mode-style 'fg=black bg=red bold'
+setw -g mode-style 'fg=black bg=green bold'
 
-# panes
-set -g pane-border-style 'fg=red'
-set -g pane-active-border-style 'fg=yellow'
+# panes (tiles)
+set -g pane-border-style 'fg=black'
+set -g pane-active-border-style 'fg=green'
 
-# statusbar
+# statusbar (where tabs appear)
 set -g status-position bottom
 set -g status-justify left
-set -g status-style 'fg=red'
+set -g status-style 'fg=pink' # Does nothing?
 
 set -g status-left ''
 set -g status-left-length 10
 
-set -g status-right-style 'fg=black bg=yellow'
-set -g status-right '%Y-%m-%d %H:%M '
+# System info
+set -g status-right-style 'fg=blue bg=black'
+set -g status-right ' #H %Y-%m-%d %H:%M '
 set -g status-right-length 50
 
-setw -g window-status-current-style 'fg=black bg=red'
-setw -g window-status-current-format ' #I #W #F '
+# Active tab style
+setw -g window-status-current-style 'fg=black bg=green'
+setw -g window-status-current-format ' #I #W #F ' # (#Index #Window-name #Full-directory-path )
 
+# Non-active Tab style
 setw -g window-status-style 'fg=red bg=black'
-setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
+setw -g window-status-format ' #[fg=white]#I #[fg=white]#W #[fg=yellow]#F '
 
+# Bell?
 setw -g window-status-bell-style 'fg=yellow bg=red bold'
 
-# messages
-set -g message-style 'fg=yellow bg=red bold'
+# messages (command prompt)
+set -g message-style 'fg=black bg=yellow bold'
+
