Update comments with accurate key names

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -23,9 +23,9 @@ bind t new-window
 # Rebind close window to Ctrl + a + x
 bind w kill-window
 
-# Map Alt+Right to next tab
+# Map Shift+Right to next tab
 bind-key -n S-Right next-window
-# Map Alt+Left to previous tab
+# Map Shift+Left to previous tab
 bind-key -n S-Left previous-window
 
 # split panes using | and -
@@ -34,7 +34,7 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# switch panes using meta-arrow without prefix
+# switch panes using alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
