Add location for file

--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -1,3 +1,6 @@
+#: ~/.config/kitty/kitty.conf (single-user)
+#: /etc/xdg/kitty/kitty.conf (system-wide)
+
 #: https://sw.kovidgoyal.net/kitty/conf/
 
 # ----------------------------------------------------------------------------------
