Adjust window naming scheme

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -1,6 +1,6 @@
-# ~/.tmux.conf
+# ~/.tmux.conf (single-user)
 # or
-# /etc/tmux.conf (all users)
+# /etc/tmux.conf (system-wide)
 
 # GENERAL OPTIONS --------------------------------------------
 
@@ -9,8 +9,6 @@ bind F5 source ~/.tmux.conf
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
-
-
 
 # HOTKEYS ----------------------------------------------------
 
@@ -43,10 +41,14 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # don't rename windows automatically
-set-option -g allow-rename off
+# set-option -g allow-rename off
 
 # Rebind window rename to Ctrl + r
 bind r command-prompt "rename-window '%%'"
+
+# Automatic window re-naming
+set -g automatic-rename off
+#set -g status-interval 1
 
 # DESIGN TWEAKS ----------------------------------------------
 
@@ -74,15 +76,20 @@ set -g status-right-length 50
 
 # Active tab style
 setw -g window-status-current-style 'fg=black bg=green'
-setw -g window-status-current-format ' #I #W #F ' # (#Index #Window-name #Full-directory-path )
+setw -g window-status-current-format ' #I #{window_name} '
+# #{b:pane_current_path} > show only last part of directory path
+# #{s/:pane_current_path} > show last two parts of directory path
+
 
 # Non-active Tab style
-setw -g window-status-style 'fg=red bg=black'
-setw -g window-status-format ' #[fg=white]#I #[fg=white]#W #[fg=yellow]#F '
+setw -g window-status-style 'bg=black'
+setw -g window-status-format ' #[fg=white]#I #{window_name} '
 
 # Bell?
 setw -g window-status-bell-style 'fg=yellow bg=red bold'
 
 # messages (command prompt)
 set -g message-style 'fg=black bg=yellow bold'
+
+
 
