--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -10,6 +10,9 @@ bind F5 source ~/.tmux.conf
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
+# Start window numbering at 1
+set -g base-index 1
+
 # HOTKEYS ----------------------------------------------------
 
 # remap prefix from 'ctrl-b' to 'ctrl-a'
