--- a/hosts/cerberus/cerberus.yml
+++ b/hosts/cerberus/cerberus.yml
@@ -14,8 +14,8 @@ services:
       - TZ=${TIMEZONE}
     volumes:
       - ${CADDYFILE_PATH}:/etc/caddy/Caddyfile
-      - caddy-data:/data
-      - caddy-config:/config
+      - ./caddy/data:/data
+      - ./caddy/config:/config
     ports:
       - 80:80
       - 443:443
