--- a/hosts/prometheus/prometheus.yml
+++ b/hosts/prometheus/prometheus.yml
@@ -1,6 +1,8 @@
 services:
   caddy:
-    build: . # this config is used with a custom build of caddy from a dockerfile.
+    build: .
+    image: caddy-cloudflare:latest
+    container_name: caddy-prometheus
     security_opt:
       - label:disable
       - no-new-privileges:true
@@ -10,8 +12,8 @@ services:
       PGID: ${GID}
     volumes:
       - ${CADDYFILE_PATH}:/etc/caddy/Caddyfile
-      - caddy-data:/data
-      - caddy-config:/config
+      - ./caddy/data:/data
+      - ./caddy/config:/config
     ports:
       - 80:80
       - 443:443
@@ -41,7 +43,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-authentik}
       POSTGRES_DB: ${POSTGRES_DB:-authentik}
     volumes:
-      - database:/var/lib/postgresql/data
+      - ./authentik/postgresql:/var/lib/postgresql/data
     env_file:
       - prometheus.env
     networks:
@@ -64,7 +66,7 @@ services:
       retries: 5
       timeout: 3s
     volumes:
-      - redis:/data
+      - ./authentik/redis:/data
     env_file:
       - prometheus.env
     networks:
@@ -89,8 +91,8 @@ services:
       AUTHENTIK_POSTGRESQL__NAME: ${POSTGRES_DB:-authentik}
       AUTHENTIK_POSTGRESQL__PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - ./media:/media
-      - ./custom-templates:/templates
+      - ./authentik/server/media:/media
+      - ./authentik/server/custom-templates:/templates
     ports:
       - "${AUTHENTIK_PORT_HTTP:-9000}:9000"
       - "${AUTHENTIK_PORT_HTTPS:-9443}:9443"
@@ -125,9 +127,9 @@ services:
     # on the mounted folders, so when removing this make sure the folders have the correct UID/GID
     # (1000:1000 by default)
     volumes:
-      - ./media:/media
-      - ./certs:/certs
-      - ./custom-templates:/templates
+      - ./authentik/worker/media:/media
+      - ./authentik/worker/certs:/certs
+      - ./authentik/worker/custom-templates:/templates
     env_file:
       - prometheus.env
     networks:
@@ -140,11 +142,3 @@ networks:
     driver: bridge
   authentik_private_net:
     driver: bridge
-  
-volumes:
-  caddy-data:
-  caddy-config:
-  database:
-    driver: local
-  redis:
-    driver: local
