--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -43,3 +43,21 @@ services:
       - ./jellyseerr/config:/app/config
     ports:
       - 5055:5055
+
+  navidrome: # https://www.navidrome.org/docs/installation/docker/
+    image: deluan/navidrome:${NAVIDROME_VERSION}
+    user: 3000:3000 # should be owner of volumes
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    environment:
+      # Optional: put your config options customization here. Examples:
+      ND_SCANSCHEDULE: 1h
+      ND_LOGLEVEL: info  
+      ND_SESSIONTIMEOUT: 24h
+      ND_BASEURL: "${NAVIDROME_URL}"
+    volumes:
+      - ./navidrome/data:/data
+      - ${MUSIC_PATH}:/music:ro
+    ports:
+      - "4533:4533"
