--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -46,6 +46,7 @@ services:
 
   navidrome: # https://www.navidrome.org/docs/installation/docker/
     image: deluan/navidrome:${NAVIDROME_VERSION}
+    container_name: navidrome
     user: 3000:3000 # should be owner of volumes
     security_opt:
       - no-new-privileges:true
