enable last.fm for navidrome

--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -57,6 +57,7 @@ services:
       ND_LOGLEVEL: info
       ND_SESSIONTIMEOUT: 24h
       ND_BASEURL: ""
+      ND_LASTFM_ENABLED: true
     volumes:
       - ./navidrome/data:/data
       - ${MUSIC_PATH}:/music:ro
