--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -58,6 +58,8 @@ services:
       ND_SESSIONTIMEOUT: 24h
       ND_BASEURL: ""
       ND_LASTFM_ENABLED: true
+      ND_LASTFM_APIKEY: ${LASTFM_API_KEY}
+      ND_LASTFM_SECRET: ${LASTFM_SHARED_SECRET}
     volumes:
       - ./navidrome/data:/data
       - ${MUSIC_PATH}:/music:ro
