--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -2,9 +2,30 @@
 # or
 # /etc/tmux.conf (system-wide)
 
+# ~/.tmux.conf
+
+# Plugins --------------------------------------------
+
+set -g @plugin 'tmux-plugins/tpm' # mandatory
+set -g @plugin 'tmux-plugins/tmux-sensible' # optional recommended
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+# {{{tmux-prefix-highlight
+set -g @prefix_highlight_fg 'colour00'
+set -g @prefix_highlight_bg 'red'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=colour00,bg=colour05,bold'
+set -g @prefix_highlight_prefix_prompt 'PREFIX'
+set -g @prefix_highlight_copy_prompt 'COPY'
+# }}}
+
+set -g @plugin 'egel/tmux-gruvbox'
+# set desired theme options...
+set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
+
 # GENERAL OPTIONS --------------------------------------------
 
-# reload config file with r
+# reload config file with F5
 bind F5 source ~/.tmux.conf
 
 # Enable mouse control (clickable windows, panes, resizable panes)
@@ -12,6 +33,10 @@ set -g mouse on
 
 # Start window numbering at 1
 set -g base-index 1
+
+# Copy and paste
+# Use vim bindings in copy mode
+# setw -g mode-keys vi
 
 # HOTKEYS ----------------------------------------------------
 
@@ -23,7 +48,7 @@ bind-key C-a send-prefix
 # Rebind to Ctrl + a, then n to create a new window
 bind t new-window
 
-# Rebind close window to Ctrl + a + x
+# Rebind close window to Ctrl + a + w
 bind w kill-window
 
 # Map Shift+Right to next tab
@@ -31,11 +56,14 @@ bind-key -n S-Right next-window
 # Map Shift+Left to previous tab
 bind-key -n S-Left previous-window
 
-# split panes using | and -
+# create panes by splitting tabs horizontally or vertically using | and -
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# close active pane using ctrl + a , x
+bind x kill-pane
 
 # switch panes using alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -46,7 +74,10 @@ bind -n M-Down select-pane -D
 # don't rename windows automatically
 # set-option -g allow-rename off
 
-# Rebind window rename to Ctrl + r
+# Rebind session rename to Ctrl + a , R
+bind R command-prompt -p "New session name:" "rename-session '%%'"
+
+# Rebind window rename to Ctrl + a , r
 bind r command-prompt "rename-window '%%'"
 
 # Automatic window re-naming
@@ -55,44 +86,28 @@ set -g automatic-rename off
 
 # DESIGN TWEAKS ----------------------------------------------
 
-set -g terminal-overrides 'xterm-256color:Tc'
+# https://github.com/sainnhe/dotfiles/blob/master/.tmux/tmuxline/gruvbox-material-dark.tmux.conf
 
-# copy mode
-setw -g mode-style 'fg=black bg=green bold'
+set -g status-justify "centre"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=#a89984,bg=#504945"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=#a89984"
+set -g status-style "none,bg=#3a3735"
+set -g message-style "fg=#a89984,bg=#504945"
+set -g pane-border-style "fg=#504945"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "underscore,fg=#a89984,bg=#3a3735"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=#a89984,bg=#3a3735"
 
-# panes (tiles)
-set -g pane-border-style 'fg=black'
-set -g pane-active-border-style 'fg=green'
+set -g status-left "#[fg=#282828,bg=#a89984] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945] %R #[fg=#504945,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#3a3735]"
 
-# statusbar (where tabs appear)
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'fg=pink' # Does nothing?
+set -g status-right "#[fg=#3a3735,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#3a3735 #[fg=#504945,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#3a3735]#[fg=#282828,bg=#a89984] #H #{prefix_highlight} "
 
-set -g status-left ''
-set -g status-left-length 10
-
-# System info
-set -g status-right-style 'fg=blue bg=black'
-set -g status-right ' #H %Y-%m-%d %H:%M '
-set -g status-right-length 50
-
-# Active tab style
-setw -g window-status-current-style 'fg=black bg=green'
-setw -g window-status-current-format ' #I #{window_name} '
-# #{b:pane_current_path} > show only last part of directory path
-# #{s/:pane_current_path} > show last two parts of directory path
-
-
-# Non-active Tab style
-setw -g window-status-style 'bg=black'
-setw -g window-status-format ' #[fg=white]#I #{window_name} '
-
-# Bell?
-setw -g window-status-bell-style 'fg=yellow bg=red bold'
-
-# messages (command prompt)
-set -g message-style 'fg=black bg=yellow bold'
-
+setw -g window-status-format "#[fg=#3a3735,bg=#3a3735,nobold,nounderscore,noitalics]#[fg=#a89984] #I  #W #[fg=#3a3735,bg=#3a3735,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#3a3735,bg=#504945,nobold,nounderscore,noitalics]#[fg=#a9b665,bg=#504945] #[bold]#I  #W  #F #[fg=#504945,bg=#3a3735,nobold,nounderscore,noitalics]"
 
 
